--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const settings = await getSiteSettings();
     <meta property="og:locale" content={locale === 'de' ? 'de_DE' : locale === 'en' ? 'en_US' : 'km_KH'} />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon.svg`} />
     
     <title>{title} | Bamboo Shoots</title>
   </head>
