--- a/astro/src/components/Footer.astro
+++ b/astro/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { t, type Locale } from '../lib/i18n';
+import { t, localizedUrl, type Locale } from '../lib/i18n';
 
 interface Props {
   locale: Locale;
